--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/js": "^7.2.96",
+    "@vuepic/vue-datepicker": "^7.0.0",
     "axios": "^1.5.1",
     "firebase": "^10.4.0",
+    "mdi-js": "^1.0.1",
+    "moment": "^2.29.4",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
